added test cases and code changes