@@ -1,9 +1,11 @@
 package org.example.ServiceImpl;
 
 import org.example.Model.Employee;
+import org.example.OrgRule;
 
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -12,22 +14,19 @@ import java.util.Map;
 import java.util.stream.Stream;
 
 public class OrgAnalyzer {
-    private Map<Integer, Employee> employees = new HashMap<>();
-    private Map<Integer, List<Employee>> managerToSubordinates = new HashMap<>();
+    private final Map<Integer, Employee> employees = new HashMap<>();
+    private final Map<Integer, List<Employee>> managerToSubordinates = new HashMap<>();
     private Employee ceo;
 
-    // Load CSV
     public void loadEmployees(String filePath) throws IOException {
-        try (Stream<String> lines = Files.lines(Paths.get(filePath))) {
-            lines.skip(1) // skip header
-                    .filter(line -> !line.trim().isEmpty()) // skip blank lines
+        try (Stream<String> lines = Files.lines(Path.of(filePath))) {
+            lines.skip(1)
+                    .filter(line -> !line.trim().isEmpty())
                     .forEach(line -> {
                         String[] parts = line.split(",", -1);
 
                         String idStr = parts[0].replaceAll("\"", "").trim();
-                        if (idStr.isEmpty()) {
-                            return; // skip empty ID
-                        }
+                        if (idStr.isEmpty()) return;
 
                         int id;
                         try {
@@ -55,9 +54,8 @@ public class OrgAnalyzer {
                         employees.put(id, emp);
 
                         if (managerId == null) {
-                            // Ensure only one CEO
                             if (ceo != null) {
-                                System.err.println("Warning: Multiple CEOs detected! Previous CEO: " + ceo + ", New CEO: " + emp);
+                                System.err.println("Warning: Multiple CEOs detected! Previous: " + ceo + ", New: " + emp);
                             }
                             ceo = emp;
                         } else {
@@ -67,53 +65,21 @@ public class OrgAnalyzer {
         }
     }
 
+    public Map<String, List<String>> runRules(List<OrgRule> rules) {
+        Map<String, List<String>> results = new HashMap<>();
 
-    // Rule 1: Salary check
-    public Map<String, List<String>> checkManagerSalaries() {
-        List<String> underpaid = new ArrayList<>();
-        List<String> overpaid = new ArrayList<>();
-
-        for (Employee manager : employees.values()) {
-            List<Employee> subs = managerToSubordinates.get(manager.getId());
-            if (subs == null || subs.isEmpty()) continue;
-
-            double avgSalary = subs.stream().mapToDouble(Employee::getSalary).average().orElse(0);
-            double minAllowed = avgSalary * 1.2;
-            double maxAllowed = avgSalary * 1.5;
-
-            if (manager.getSalary() < minAllowed) {
-                underpaid.add(manager + " earns less than they should by " + String.format("%.2f", (minAllowed - manager.getSalary())));
-            } else if (manager.getSalary() > maxAllowed) {
-                overpaid.add(manager + " earns more than they should by " + String.format("%.2f", (manager.getSalary() - maxAllowed)));
+        for (OrgRule rule : rules) {
+            List<String> output = rule.validate(employees, managerToSubordinates);
+            if (!output.isEmpty()) {
+                results.put(rule.getClass().getSimpleName(), output);
             }
         }
 
-        Map<String, List<String>> result = new HashMap<>();
-        result.put("underpaid", underpaid);
-        result.put("overpaid", overpaid);
-        return result;
-    }
-
-
-    // Rule 2: Reporting line too long
-    public List<String> checkReportingLines() {
-        List<String> results = new ArrayList<>();
-        for (Employee emp : employees.values()) {
-            int depth = countManagers(emp);
-            if (depth > 4) {
-                results.add(emp + " have a reporting line which is too long, and by " + (depth - 4) );
-            }
-        }
         return results;
     }
 
-    private int countManagers(Employee emp) {
-        int depth = 0;
-        Integer mgrId = emp.getManagerId();
-        while (mgrId != null) {
-            depth++;
-            mgrId = employees.get(mgrId).getManagerId();
-        }
-        return depth;
-    }
+    // Getter for testing
+    public Map<Integer, Employee> getEmployees() { return employees; }
+    public Employee getCeo() { return ceo; }
+
 }
